--- a/src/components/Logo/Logo.css
+++ b/src/components/Logo/Logo.css
@@ -1,3 +1,3 @@
 .Tilt {
-	background: linear-gradient(89deg, #FF5EDF 0%, #04C8DE 100%);
+	background: linear-gradient(89deg, #a443f2 0%, #a243e6 100%);
 }
